# CUGAr-SALES

./: .env.example  .env.sales.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_BACKEND_COMPLETE.md  AGENTS_COMPLIANCE_COMPLETE.md  AGENTS_COMPLIANCE_INTEGRATION.md  AGENTS_COMPLIANCE_TESTING.md  AGENTS_COMPLIANCE_VALIDATION.md  ALL_ENHANCEMENTS_COMPLETE.md  API_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  AUDIT_REPORT.md  BACKEND_API_INTEGRATION_COMPLETE.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CLEANUP_EXECUTION.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESKTOP_DEPLOYMENT.md  DESKTOP_IMPLEMENTATION_SUMMARY.md  DESKTOP_UI_INTEGRATION_COMPLETE.md  DETERMINISTIC_ROUTING_PLANNING_SUMMARY.md  DOCUMENTATION.md  E2E_INTEGRATION_STATUS.md  E2E_TEST_RESULTS.md  E2E_TEST_STATUS.md  EVALUATION.md  EXTERNAL_DATA_FEEDS_STATUS.md  FILES_CHANGED_2026-01-04.md  FRONTEND_BUILD_SETUP.md  FRONTEND_INTEGRATION_COMPLETE.md  FULL_INTEGRATION_SUMMARY.md  FULL_STACK_INTEGRATION_COMPLETE.md  HARDENING_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_HARDENING_PLAN.md  INTEGRATION_REFACTORING_COMPLETE.md  (+69 more)
.run/: API Registry Appworld.run.xml  API Registry Demo.run.xml  App World Eval.run.xml  Cuga Demo.run.xml
CUGAr-SALES/: README.md
config/: registry.yaml
configs/: adapters.yaml.example  observability.yaml
docs/: AGENTS.md  AUDIT.md  DEPLOYMENT_MODES.md  DEVELOPER_ONBOARDING.md  EMBEDDED_ASSETS.md  LOCAL_MODE.md  MCP_INTEGRATION.md  MCP_LANGCHAIN_OVERVIEW.md  REGISTRY_MERGE.md  deployment.md  (+10 more)
docs/examples/demo_apps/setup/: cli.py  pyproject.toml
(+450 files in other folders)
