[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-cuga-demo"
version = "1.0.0"
description = "One-command setup for CUGA Agent demo with MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0.0"
]

[project.scripts]
create-cuga-demo = "cli:main"

[tool.uv]
dev-dependencies = []

[tool.setuptools]
py-modules = ["cli"]